--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -14,7 +14,7 @@
   display: inline-block;
   height: 150px;
   vertical-align: top;
-  margin-left: 1%;
+  margin-left: 25px;
 }
 
 #header-text-wrapper {
